Correct spacing for first screen width

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ html {
   display: block;
   list-style: none;
   padding: 0;
+  margin: 0 0 1.3rem;
 }
 
 .card {
@@ -31,7 +32,7 @@ html {
 .card-img {
   width: 50px;
   display: inline;
-  margin: .75em;
+  margin: 0 0 1em;
 }
 
 .card-body {
@@ -40,9 +41,10 @@ html {
 
 .card-body h2 {
   font-size: 1.5rem;
+  font-weight: normal;
   margin: 0;
 }
 
 .card-body p {
-  margin: 0;
+  margin: 0 0 1.3rem;
 }
